# Music-Recommendation-Engine

./: .env  .gitignore  .todo  BTS_ON_metadata.json  README.md  The_Beatles_A_Hard_Day's_Night_metadata.json  all3.py  cols  env.py  genius.py  lastfm.ipynb  lastfm.py  main.py  metadata.json  musicbrainz.py  pyproject.toml  requirements.txt
Schema/: MusicAPI.json  MusicAPI.schema  UnformatedFull.json  final  psql schemas temp  schemas temp  waveforms postgresql
SpotifyAPI/: spotify_client.py  spotify_data_the_beatles_20250325_195748.json
WAV-Downloader/: script.py
Waveform-Shubh/: GTZAN  Analysis.ipynb  waveform_features.py
analysis/: Cockroach_Analysis.ipynb  Mongo_Analysis.ipynb  NLP Lyrical Analysis.ipynb
audio_files/: audio_wav.py
backup/: SONGS TO FILL in audio_features.xlsx  lyrics_202505030029.sql  mre.sql  music-recommendation-engine-dump  music.albums.json  music.artist.json
database/: cockroachdb.py  mongodb.py
fetchData-api/: MAIN3.py  genius.py  last_fm.py  load_data.py  main-test.py  main_test.py  musicbrainz.py
fetchDataApi/: genius.py  geniusAnnotator.py  last_fm.py  musicbrainz.py  track_lyrics_metadata.py
loader/: Albums  - Sheet1.csv  Albums  - Sheet2.csv  NLP Lyrical Analysis.ipynb  load-albumbs-ver0.py  load-albums-ver0.py  load-artist-ver0.py  load-artists-ver0.py  load-lyrics_sentiment.py  load-spectrogram-audio.py  load-track-lyrics-ver0.py  load-track-reference.py  load-track_links-audio_features.py
recommendation/: Clustering.ipynb  Content-Based-Filtering.ipynb  Word2Vec.ipynb
sentiment_analysis/: doc.md  go_emotions.py  (+3 more)
(+91 files in other folders)
