[project]
name = "music-recommendation-engine"
version = "0.1.0"
description = "Music-recommendation via NLP + Waveform Analysis"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "ffmpeg>=1.4",
    "ffprobe>=0.5",
    "numpy>=2.2.4",
    "os",
    "psycopg2>=2.9.10",
    "requests>=2.32.3",
    "yt-dlp>=2025.3.31",
]
